# argus

./: .gitignore  LICENSE  README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
backend/data/: test_results.db
backend/src/: server.py
backend/src/classes/: BackSlicer.py  CMake.py  CVE.py  CallGraphNode.py  LibraryInfos.py  Model.py  OpenRouter.py  ProjectInfos.py  config.py
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json
frontend/.claude/: launch.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  swiper-css.d.ts
frontend/src/app/tests/: TestsPage.tsx  layout.tsx  page.tsx
frontend/src/components/Button/: ConfigMenu.tsx  ConfigMenuTest.tsx  DarkModeToggle.tsx
frontend/src/components/Hero/: Hero.tsx
frontend/src/components/Input/: FolderPicker.tsx
frontend/src/components/Item/: CVEItem.tsx
frontend/src/components/Modal/: AiReportModal.tsx
rapports/DebugStory/: historique_projet.tex
rapports/Doc/: guide_utilisation.tex
rapports/PoC/: poc_limites.tex
sample/: README.md
sample/level_0/: README.md  vuln.cpp
sample/level_1/: CMakeLists.txt  vuln.cpp
sample/test_files_safe/: CMakeLists.txt  main.cpp
sample/test_files_vulnerable/: CMakeLists.txt  main.cpp  utils.cpp
